--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
       <!--Навигация-->
       <div class="logo-menu-wrapper">
         <a class="logo link" href="./index.html"> <span class="logo-web">Web</span> Studio</a>
-        <button data-menu-button class="menu-button is-open" type="button">
+        <button data-menu-button class="menu-button" type="button">
           <svg class="icon menu" width="40px" height="40px" aria-label="Переключатель мобильного меню">
             <use class="icon-burger"href="./images/symbol-defs.svg#icon-menu"></use>
             <use class="icon-close"href="./images/symbol-defs.svg#icon-close"></use>
           </svg>
         </button>
       </div>
-      <div data-menu class="nav-contacts-wrapper is-open">
+      <div data-menu class="nav-contacts-wrapper">
         <nav class="nav">
           <ul class="nav-list list">
             <li class="nav-list-item"><a href="./index.html" class="nav-list-item-link link current">Студия</a></li>
