finished mobile & tablet versions

--- a/index.html
+++ b/index.html
@@ -373,7 +373,7 @@
       <!--Конец секции Наша команда-->
 
       <!--Секция Постоянные клиенты-->
-      <!-- <section class="clients">
+      <section class="clients">
         <div class="container">
           <h2>Постоянные клиенты</h2>
         <ul class="clients-list list">
@@ -422,15 +422,15 @@
         </ul>
         </div>
       </section>
-    </main> -->
+    </main>
     <!--Конец секции Постоянные клиенты-->
 
     <!--Подвал сайта-->
-    <!-- <footer class="footer">
-      <div class="container footer"> -->
+    <footer class="footer">
+      <div class="container footer">
         <!--Лого и адрес-->
-      <!-- <div class="footer-item-wrapper">
-        <a class="footer-logo link" href="./index.html"> <span class="logo-web">Web</span> Studio</a>
+      <div class="footer-item-wrapper">
+        <a class="footer-logo link" href="./index.html"> <span class="logo-web">Web</span>Studio</a>
         <address class="list">
           <ul class="address list">
             <li class="address-item"><a class="address-item-post link" href="https://goo.gl/maps/r3DYGoSErNJREdqL9" target="blank">г. Киев, пр-т Леси Украинки, 26</a></li>
@@ -438,10 +438,10 @@
             <li class="address-item"><a class="address-item-phone link" href="tel:+380961111111">+380961111111</a></li>
           </ul>
         </address>
-      </div> -->
+      </div>
 
       <!--Блок Присоединяйтесь-->
-      <!-- <div class="join">
+      <div class="join">
         <b class="join-title">Присоединяйтесь</b>
         <ul class="join-list list">
           <li class="social-item">
@@ -473,10 +473,10 @@
             </a>
           </li>
         </ul>
-      </div> -->
+      </div>
 
       <!--Блок Подпишитесь на рассылку-->
-      <!-- <div class="subscribe">
+      <div class="subscribe">
         <form class="subscribe-form" method="" action="№">
           <b class="subscribe-title">Подпишитесь на рассылку</b>
           <div class="subscribe-form-wrapper">
@@ -490,10 +490,10 @@
         </form>
       </div>
       </div>
-    </footer> -->
+    </footer>
 
     <!-- МОДАЛЬНОЕ ОКНО - ОСТАВЬТЕ ЗАЯВКУ -->
-    <!-- <div data-modal class="backdrop is-hidden">
+    <div data-modal class="backdrop is-hidden">
       <form action="#" class="application-form">
         <h2 class="application-form-title">
           Оставьте свои данные, мы вам перезвоним
@@ -535,7 +535,7 @@
 
   
       </form>
-    </div> -->
+    </div>
 
     <!-- СКРИПТ ДЛЯ МОДАЛЬНОГО ОКНА -->
     <script src="./js/modal.js"></script>
