--- a/portfolio.html
+++ b/portfolio.html
@@ -74,7 +74,21 @@
                   <li class="gallery-works-box">
                     <a class="link" href="">
                       <div class="gallery-works-thumb">
-                        <img class="image" src="./images/portfolio/project-1.jpg" alt="Ноутбук с отрытым веб-сайтом">
+                        <div class="gallery-image-thumb">
+                          <picture>
+                            <source
+                              srcset="./images/portfolio/project-1.webp 1x,
+                               ./images/portfolio/project-1@2x.webp 2x,
+                                ./images/portfolio/project-1@3x.webp 3x"
+                              type="image/webp">
+                            <img class="image"
+                              srcset="./images/portfolio/project-1.jpg 1x,
+                               ./images/portfolio/project-1@2x.jpg 2x,
+                               ./images/portfolio/project-1@3x.jpg 3x"
+                              src="./images/portfolio/project-1.jpg"
+                              alt="Ноутбук с отрытым веб-сайтом">
+                          </picture>
+                        </div>
                         <p class="gallery-works-box-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового шпионажа и атак на защищённые сервера конкурентов.</p></div>
                       <div class="wrapper">
                         <h2 class="gallery-works-box-name">Технокряк</h2>
@@ -85,7 +99,20 @@
                   <li class="gallery-works-box">
                     <a class="link" href="">
                       <div class="gallery-works-thumb">
-                        <img class="image" src="./images/portfolio/project-2.jpg" alt="Баскетболисты">
+                        <div class="gallery-image-thumb">
+                          <picture>
+                            <source
+                              srcset="./images/portfolio/project-2.webp 1x,
+                               ./images/portfolio/project-2@2x.webp 2x,
+                                ./images/portfolio/project-2@3x.webp 3x"
+                              type="image/webp">
+                            <img class="image"
+                              srcset="./images/portfolio/project-2.jpg 1x,
+                               ./images/portfolio/project-2@2x.jpg 2x,
+                               ./images/portfolio/project-2@3x.jpg 3x"
+                              src="./images/portfolio/project-2.jpg"
+                              alt="Баскетболисты">
+                          </picture>                        </div>
                         <p class="gallery-works-box-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda laudantium fuga magni id dicta odit, culpa facere ab et sed eum quo unde molestiae quisquam ipsa dolores quas molestias itaque!</p></div>
                       <div class="wrapper">
                         <h2 class="gallery-works-box-name">Постер <span lang="en">New Orlean vs Golden Star</span></h2>
@@ -96,7 +123,20 @@
                   <li class="gallery-works-box">
                     <a class="link" href="">
                       <div class="gallery-works-thumb">
-                        <img class="image" src="./images/portfolio/project-3.jpg" alt="Логотип ресторана">
+                        <div class="gallery-image-thumb">
+                          <picture>
+                            <source
+                              srcset="./images/portfolio/project-3.webp 1x,
+                               ./images/portfolio/project-3@2x.webp 2x,
+                                ./images/portfolio/project-3@3x.webp 3x"
+                              type="image/webp">
+                            <img class="image"
+                              srcset="./images/portfolio/project-3.jpg 1x,
+                               ./images/portfolio/project-3@2x.jpg 2x,
+                               ./images/portfolio/project-3@3x.jpg 3x"
+                              src="./images/portfolio/project-3.jpg"
+                              alt="Логотип ресторана">
+                          </picture>                        </div>
                         <p class="gallery-works-box-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda laudantium fuga magni id dicta odit, culpa facere ab et sed eum quo unde molestiae quisquam ipsa dolores quas molestias itaque!</p>
                       </div>
                       <div class="wrapper">
@@ -108,7 +148,21 @@
                   <li class="gallery-works-box">
                     <a class="link" href="">
                       <div class="gallery-works-thumb">
-                        <img class="image" src="./images/portfolio/project-4.jpg" alt="Наушники">
+                        <div class="gallery-image-thumb">
+                          <picture>
+                            <source
+                              srcset="./images/portfolio/project-4.webp 1x,
+                               ./images/portfolio/project-4@2x.webp 2x,
+                                ./images/portfolio/project-4@3x.webp 3x"
+                              type="image/webp">
+                            <img class="image"
+                              srcset="./images/portfolio/project-4.jpg 1x,
+                               ./images/portfolio/project-4@2x.jpg 2x,
+                               ./images/portfolio/project-4@3x.jpg 3x"
+                              src="./images/portfolio/project-4.jpg"
+                              alt="Наушники">
+                          </picture>
+                        </div>
                       <p class="gallery-works-box-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda laudantium fuga magni id dicta odit, culpa facere ab et sed eum quo unde molestiae quisquam ipsa dolores quas molestias itaque!</p>
                       </div>
                       <div class="wrapper">
@@ -120,7 +174,21 @@
                   <li class="gallery-works-box">
                     <a class="link" href="">
                       <div class="gallery-works-thumb">
-                        <img class="image" src="./images/portfolio/project-5.jpg" alt="Две коробки">
+                        <div class="gallery-image-thumb">
+                          <picture>
+                            <source
+                              srcset="./images/portfolio/project-5.webp 1x,
+                               ./images/portfolio/project-5@2x.webp 2x,
+                                ./images/portfolio/project-5@3x.webp 3x"
+                              type="image/webp">
+                            <img class="image"
+                              srcset="./images/portfolio/project-5.jpg 1x,
+                               ./images/portfolio/project-5@2x.jpg 2x,
+                               ./images/portfolio/project-5@3x.jpg 3x"
+                              src="./images/portfolio/project-5.jpg"
+                              alt="Две коробки">
+                          </picture>
+                      </div>
                       <p class="gallery-works-box-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda laudantium fuga magni id dicta odit, culpa facere ab et sed eum quo unde molestiae quisquam ipsa dolores quas molestias itaque!</p>
                       </div>
                       <div class="wrapper">
@@ -132,7 +200,21 @@
                   <li class="gallery-works-box">
                     <a class="link" href="">
                       <div class="gallery-works-thumb">
-                        <img class="image" src="./images/portfolio/project-6.jpg" alt="Монитор">
+                        <div class="gallery-image-thumb">
+                          <picture>
+                            <source
+                              srcset="./images/portfolio/project-6.webp 1x,
+                               ./images/portfolio/project-6@2x.webp 2x,
+                                ./images/portfolio/project-6@3x.webp 3x"
+                              type="image/webp">
+                            <img class="image"
+                              srcset="./images/portfolio/project-6.jpg 1x,
+                               ./images/portfolio/project-6@2x.jpg 2x,
+                               ./images/portfolio/project-6@3x.jpg 3x"
+                              src="./images/portfolio/project-6.jpg"
+                              alt="Монитор">
+                          </picture>
+                        </div>
                     <p class="gallery-works-box-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda laudantium fuga magni id dicta odit, culpa facere ab et sed eum quo unde molestiae quisquam ipsa dolores quas molestias itaque!</p>
                     </div>
                       <div class="wrapper">
@@ -144,7 +226,21 @@
                   <li class="gallery-works-box">
                     <a class="link" href="">
                       <div class="gallery-works-thumb">
-                        <img class="image" src="./images/portfolio/project-7.jpg" alt="Журнал">
+                        <div class="gallery-image-thumb">
+                          <picture>
+                            <source
+                              srcset="./images/portfolio/project-7.webp 1x,
+                               ./images/portfolio/project-7@2x.webp 2x,
+                                ./images/portfolio/project-7@3x.webp 3x"
+                              type="image/webp">
+                            <img class="image"
+                              srcset="./images/portfolio/project-7.jpg 1x,
+                               ./images/portfolio/project-7@2x.jpg 2x,
+                               ./images/portfolio/project-7@3x.jpg 3x"
+                              src="./images/portfolio/project-7.jpg"
+                              alt="Журнал">
+                          </picture>
+                        </div>
                     <p class="gallery-works-box-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda laudantium fuga magni id dicta odit, culpa facere ab et sed eum quo unde molestiae quisquam ipsa dolores quas molestias itaque!</p>
                       </div>
                       <div class="wrapper">
@@ -156,7 +252,21 @@
                   <li class="gallery-works-box">
                     <a class="link" href="">
                       <div class="gallery-works-thumb">
-                        <img class="image" src="./images/portfolio/project-8.jpg" alt="Бирка">
+                        <div class="gallery-image-thumb">
+                          <picture>
+                            <source
+                              srcset="./images/portfolio/project-8.webp 1x,
+                               ./images/portfolio/project-8@2x.webp 2x,
+                                ./images/portfolio/project-8@3x.webp 3x"
+                              type="image/webp">
+                            <img class="image"
+                              srcset="./images/portfolio/project-8.jpg 1x,
+                               ./images/portfolio/project-8@2x.jpg 2x,
+                               ./images/portfolio/project-8@3x.jpg 3x"
+                              src="./images/portfolio/project-8.jpg"
+                              alt="Бирка">
+                          </picture>
+                         </div>
                       <p class="gallery-works-box-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda laudantium fuga magni id dicta odit, culpa facere ab et sed eum quo unde molestiae quisquam ipsa dolores quas molestias itaque!</p>
                       </div>
                       <div class="wrapper">
@@ -168,7 +278,21 @@
                   <li class="gallery-works-box">
                     <a class="link" href="">
                        <div class="gallery-works-thumb">
-                        <img class="image" src="./images/portfolio/project-9.jpg" alt="Ноубук с откртым сайтом компании">
+                        <div class="gallery-image-thumb">
+                          <picture>
+                            <source
+                              srcset="./images/portfolio/project-9.webp 1x,
+                               ./images/portfolio/project-9@2x.webp 2x,
+                                ./images/portfolio/project-9@3x.webp 3x"
+                              type="image/webp">
+                            <img class="image"
+                              srcset="./images/portfolio/project-9.jpg 1x,
+                               ./images/portfolio/project-1@2x.jpg 2x,
+                               ./images/portfolio/project-9@3x.jpg 3x"
+                              src="./images/portfolio/project-9.jpg"
+                              alt="Ноутбук с отрытым веб-сайтом компании">
+                          </picture>
+                        </div>
                         <p class="gallery-works-box-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda laudantium fuga magni id dicta odit, culpa facere ab et sed eum quo unde molestiae quisquam ipsa dolores quas molestias itaque!</p>
                        </div>
                         <div class="wrapper">
